feat(eventlog): domain-event change log + source discriminator
Adds a second writer to the event log so system/process activity is captured,
not just HTTP requests. A new @ApplicationModuleListener on the published
envelope ErrandEvents (created/status/assigned/deleted) records source=EVENT
rows — origin-agnostic, so process- and system-driven changes appear even when
no HTTP request carried them. Most notably errand *creation*, which the request
interceptor cannot see (the create call has no errand id in its path). Actor is
taken from the event, defaulting to 'system' when it carries none.

New 'source' column (HTTP | EVENT) on errand_event and the ErrandEvent response
distinguishes the access log (interceptor, X-Sent-By actor) from the change log
(events). V5_21 adds it and relaxes http_method/request_path/status_code to
nullable, since event-sourced rows carry no HTTP detail.